--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "dmscreen",
+  "name": "react-redux-template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "prop-types": "^15.6.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-grid-system": "^3.1.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.3",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "seedrandom": "^2.4.3"
   },
@@ -19,7 +19,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "redux-logger": "^3.0.6"
-  }
+  "devDependencies": {}
 }
